--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,5 @@
 packages:
-  - packages/**
-  - apps/**
+  # all packages in direct subdirs of packages/
+  - 'packages/**'
+  # all apps in direct subdirs of apps/
+  - 'apps/**'
