set typescript config

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,15 @@
   "name": "@packages/ui",
   "version": "1.0.0",
   "main": "index.ts",
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
+  "packageManager": "pnpm@9.6.0",
   "dependencies": {
     "@nuxt/kit": "^3.12.4"
+  },
+  "devDependencies": {
+    "@repo/tsconfig": "workspace:*",
+    "typescript": "^5.5.4"
   }
 }
