--- a/apps/agent/tsconfig.json
+++ b/apps/agent/tsconfig.json
@@ -1,9 +1,9 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
+  "extends": ["./.nuxt/tsconfig.json",  "@tooling/tsconfig/base.json"],
   "compilerOptions": {
     "paths": {
-      "@pkgs/*": ["../../packages/*"]
+      "@packages/*": ["../../packages/*"]
     }
   }
 }
