--- a/package.json
+++ b/package.json
@@ -3,14 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "pnpm run -r dev",
-    "build": "pnpm run -r build",
-    "types:check": "tsc"
+    "typecheck": "pnpm run -r typecheck"
   },
-  "packageManager": "pnpm@9.3.0",
-  "dependencies": {
-    "@packages/ui": "workspace:*"
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2"
-  }
+  "packageManager": "pnpm@9.6.0"
 }
