--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,4 @@
 packages:
-  # all packages in direct subdirs of packages/
-  - 'packages/**'
-  # all apps in direct subdirs of apps/
   - 'apps/**'
+  - 'packages/**'
+  - 'tooling/**'
