--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev --port=3001",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:eslint": "eslint ."
   },
   "dependencies": {
     "nuxt": "^3.12.4",
