update settings .vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,65 +1,4 @@
 {
-  "better-comments.tags": [
-    {
-      "tag": "FIXME",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#FF6347",
-      "bold": false,
-      "italic": false
-    },
-    {
-      "tag": "HACK",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#696969",
-      "bold": false,
-      "italic": false
-    },
-    {
-      "tag": "TODO",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#FFA500",
-      "bold": false,
-      "italic": false
-    },
-    {
-      "tag": "NOTE",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#4169E1",
-      "bold": false,
-      "italic": false
-    },
-    {
-      "tag": "DESCRIBE",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#00008b",
-      "bold": false,
-      "italic": true
-    },
-    {
-      "tag": "VUETIFY",
-      "color": "#FFFFFF",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#1e90ff",
-      "bold": false,
-      "italic": true
-    }
-  ],
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
   "eslint.experimental.useFlatConfig": true,
-  "vue.complete.casing.props": "camel",
-  "vue.complete.casing.tags": "pascal"
-  // "eslint.workingDirectories": ["./packages/ui"],
-  // "eslint.probe": ["javascript", "javascriptreact", "vue"]
+  "eslint.workingDirectories": ["./packages/ui", "./apps/agent", "./apps/client"]
 }
