--- a/apps/agent/tsconfig.json
+++ b/apps/agent/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": ["./.nuxt/tsconfig.json",  "@tooling/tsconfig/base.json"],
+  "extends": ["./.nuxt/tsconfig.json"],
   "compilerOptions": {
     "paths": {
       "@packages/*": ["../../packages/*"]
