install vue-tsc for agent & client

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -8,10 +8,15 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxi typecheck"
   },
   "dependencies": {
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@repo/tsconfig": "workspace:*",
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.0.29"
   }
 }
