--- a/apps/agent/tsconfig.json
+++ b/apps/agent/tsconfig.json
@@ -1,7 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": ["./.nuxt/tsconfig.json",  "@tooling/tsconfig/base.json"],
+  "extends": ["./.nuxt/tsconfig.json",  "@repo/tsconfig/base.json"],
   "compilerOptions": {
+    "incremental": false,
     "paths": {
       "@packages/*": ["../../packages/*"]
     }
