--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@repo/esconfig": "workspace:*"
   }
 }
