--- a/tooling/eslint-config/package.json
+++ b/tooling/eslint-config/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
     "@types/eslint-config-prettier": "^6.11.3",
